# halal-filter

./: .gitignore  Cargo.toml  LICENSE  README.md  THIRD_PARTY_NOTICES.md
android/: settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/: tracker_descriptions.json
android/app/src/main/kotlin/com/halalfilter/: DashboardViewModel.kt  HalalFilterApp.kt  MainActivity.kt
android/app/src/main/kotlin/com/halalfilter/bridge/: NativeFilter.kt
android/app/src/main/kotlin/com/halalfilter/data/: TrackerInfo.kt
android/app/src/main/kotlin/com/halalfilter/ui/: BatteryOptimizationGuide.kt  DashboardScreen.kt  DiagnosticScreen.kt
android/app/src/main/kotlin/com/halalfilter/ui/theme/: Theme.kt
android/app/src/main/kotlin/com/halalfilter/vpn/: BootReceiver.kt  DoHResolver.kt  HalalVpnService.kt
android/app/src/main/res/drawable/: ic_launcher_foreground.xml
android/app/src/main/res/values/: strings.xml  themes.xml
benches/: filter_bench.rs
data/: sources.toml
data/trackers/: islamic_apps.txt  tracker_descriptions.json
scripts/: build_all.sh  fetch_lists.sh
src/: dns.rs  filter.rs  jni_bridge.rs  lib.rs  parser.rs
